# eldritch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  card.md  feature.md  scenario.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
crates/card-data-pipeline/: Cargo.toml
crates/card-data-pipeline/src/: main.rs
crates/card-dsl/: Cargo.toml
crates/card-dsl/src/: card_data.rs  dsl.rs  lib.rs
crates/cards/: Cargo.toml
crates/cards/src/: lib.rs  types.rs
crates/cards/src/impls/: act_01108.rs  act_01109.rs  act_01110.rs  agenda_01105.rs  agenda_01106.rs  agenda_01107.rs  ancient_evils.rs  attic.rs  automatic_45.rs  barricade.rs  beat_cop.rs  cellar.rs  cover_up.rs  crypt_chill.rs  deduction.rs  dissonant_voices.rs  dodge.rs  dr_milan_christopher.rs  dynamite_blast.rs  emergency_cache.rs  evidence.rs  first_aid.rs  flashlight.rs  frozen_in_fear.rs  grasping_hands.rs  guard_dog.rs  guts.rs  holy_rosary.rs  hyperawareness.rs  knife.rs  machete.rs  magnifying_glass.rs  manual_dexterity.rs  medical_texts.rs  mind_over_matter.rs  mod.rs  obscuring_fog.rs  old_book_of_lore.rs  overpower.rs  perception.rs  (+21 more)
crates/cards/tests/: act_advancement.rs  activate_ability_aoo.rs  advance_act_interactive_reverse.rs  agenda_01107.rs  agenda_forced_anchor.rs  agenda_reverses.rs  asset_slots.rs  back_side.rs  barricade.rs  beat_cop.rs  commit_cap.rs  cover_up.rs  deduction.rs  dodge.rs  dodge_aoo.rs  dr_milan.rs  dynamite_blast.rs  enemies.rs  enemy_spawn_no_location.rs  enumerate_actions.rs  evidence.rs  fast_play.rs  first_aid.rs  flashlight.rs  forced_acknowledge.rs  guard_dog_soak.rs  holy_rosary.rs  hyperawareness.rs  magnifying_glass.rs  medical_texts.rs  mind_over_matter.rs  neutral_cards.rs  non_attack_soak.rs  old_book_of_lore.rs  persistent_treachery.rs  play_card.rs  play_card_aoo.rs  player_draw_revelation.rs  registry_smoke.rs  reject_rollback.rs  (+15 more)
crates/game-core/: Cargo.toml
crates/game-core/src/: action.rs  card_data.rs  card_registry.rs  dsl.rs  event.rs  lib.rs  rng.rs  scenario.rs  scenario_registry.rs
crates/game-core/src/engine/: cx.rs  dispatch.rs  enumerate.rs  evaluator.rs  mod.rs  outcome.rs  pathfinding.rs
crates/game-core/src/engine/dispatch/: abilities.rs  act_agenda.rs  actions.rs  advance_reverse.rs  cards.rs  choice.rs  clue_interrupt.rs  combat.rs  coordinator.rs  cursor.rs  elimination.rs  emit.rs  encounter.rs  forced_triggers.rs  hunters.rs  mod.rs  phases.rs  reaction_windows.rs  reveal.rs  skill_test.rs  slots.rs  threat_area.rs
crates/game-core/src/state/: builder.rs  card.rs  chaos_bag.rs  counter.rs  enemy.rs  game_state.rs  investigator.rs  location.rs  mod.rs  phase.rs
crates/game-core/src/test_support/: assertions.rs  builder.rs  fixtures.rs  mod.rs  resolver.rs
crates/game-core/tests/: act_round_end.rs  activate_ability.rs  commit_attack_buff.rs  discard_self.rs  enemy_encounter_spawn.rs  forced_triggers.rs  native_effect.rs  on_skill_test_resolution.rs  reaction_windows.rs  round_end_rescan.rs  round_ended.rs  skill_test_outcome_timing.rs  weapon_fight.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/scenarios/: Cargo.toml
crates/scenarios/src/: lib.rs  the_gathering.rs
crates/scenarios/src/test_fixtures/: mod.rs  synth_cards.rs  synthetic.rs
crates/scenarios/tests/: closing_demo.rs  cover_up_interrupt.rs  encounter_reveal.rs  encounter_spawn.rs  hunter_movement.rs  issue_476_fast_window.rs  issue_482_advance.rs  mythos_phase.rs  opening_hand_weaknesses.rs  revelation_choice.rs  synthetic_resolution.rs  the_gathering.rs  the_gathering_resolutions.rs  the_gathering_symbols.rs  upkeep_hand_size.rs  upkeep_phase.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_seed_outcome.sql  0003_setup_events.sql
crates/server/src/: db.rs  id.rs  lib.rs  lifecycle.rs  main.rs  session.rs  store.rs  wire.rs  ws.rs
crates/server/tests/: closing_demo.rs  connect_pool.rs  game_session.rs  health.rs  lifecycle.rs  migrations.rs  registries.rs  resume.rs  setup_events.rs  static_files.rs  ws.rs
crates/server/tests/common/: mod.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/web/src/: act_agenda.rs  app.rs  board.rs  card.rs  controls.rs  enemy_card.rs  event_log.rs  input.rs  interaction.rs  legality.rs  lib.rs  main.rs  map.rs  names.rs  picker.rs  prompt_banner.rs  skill_test_result.rs  status_bar.rs  store.rs  transport.rs  turn_tracker.rs  url.rs
crates/web/tests/: act_agenda.rs  awaiting_input.rs  board.rs  card.rs  context_menu.rs  controls.rs  enemy_card.rs  entity_names.rs  event_log.rs  in_play_card.rs  input.rs  location_card.rs  map.rs  picker.rs  prompt_banner.rs  registry_smoke.rs  skill_test_result.rs  smoke.rs  status_bar.rs  store.rs  turn_tracker.rs
data/arkhamdb-snapshot/: SOURCE.md
data/campaign-guides/: SOURCE.md
data/rules-reference/: SOURCE.md
docs/audits/: 2026-07-17-audit.md
docs/demos/: phase-6-toy-scenario.md
docs/phases/: README.md  phase-0-foundations.md  phase-1-engine-bones.md  phase-10-dunwich-and-iteration.md  phase-2-card-data-and-dsl.md  phase-3-skill-test-end-to-end.md  phase-4-scenario-plumbing.md  phase-5-server-and-persistence.md  phase-6-web-client-v0.md  phase-7-the-gathering.md  phase-8-multiplayer-and-auth.md  phase-9-campaign-and-night-of-the-zealot.md
docs/superpowers/plans/: 2026-05-21-103-unified-window-stack.md  2026-05-21-74-scenario-module-skeleton.md  2026-05-22-126-revelation-dsl.md  2026-05-22-127-enemy-spawn-rules.md  2026-05-22-72-encounter-deck-state.md  2026-05-24-69-mythos-phase-content.md  2026-05-26-upkeep-phase-content.md  2026-05-28-71-enemy-phase-engagement-attacks.md  2026-05-29-137-investigation-phase-full-driver.md  2026-05-30-128-hunter-movement.md  2026-05-31-144-investigator-elimination-flow.md  2026-05-31-act-agenda-resolution.md  2026-06-03-147-mulligan-player-order-cursor.md  2026-06-03-issue-150-upkeep-reengage.md  2026-06-04-dispatch-split.md  2026-06-04-phase4-closing-demo.md  (+122 more)
(+114 files in other folders)
