[workspace]
resolver = "2"
members = [
    "crates/game-core",
    "crates/cards",
    "crates/scenarios",
    "crates/server",
    "crates/web",
    "crates/card-data-pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/talelburg/eldritch"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that fire too noisily for early-stage code:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
