[workspace]
resolver = "2"
members = [
    "crates/card-dsl",
    "crates/game-core",
    "crates/cards",
    "crates/scenarios",
    "crates/protocol",
    "crates/server",
    "crates/web",
    "crates/card-data-pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/talelburg/eldritch"
rust-version = "1.95"

[workspace.lints.rust]
# `deny`, not `forbid`: the `ctor` crate (test-only, used to install registries
# before integration tests run) requires `#[ctor::ctor(unsafe)]`, whose expansion
# opts in via `#[allow(unsafe_code)]` — which `forbid` (being absolute) rejects.
# `deny` still errors on any unsafe by default; the only opt-in is the ctor macro.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Two pedantic lints we deliberately don't enforce — stylistic preferences, not
# a maturity concession: `module_name_repetitions` would force churny renames
# (e.g. `card::CardCode`), and `must_use_candidate` is noise (we hand-apply
# `#[must_use]` where it earns its keep). The doc lints (`missing_errors_doc` /
# `missing_panics_doc`) are enforced — see the `# Errors` / `# Panics` sections.
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
