[package]
name = "cards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch card definitions: hybrid DSL + Rust impls, plus generated metadata from ArkhamDB."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
serde = { version = "1", features = ["derive"] }
