[package]
name = "cards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch card definitions: hybrid DSL + Rust impls, plus generated metadata from ArkhamDB."

[lints]
workspace = true

[dependencies]
card-dsl = { path = "../card-dsl" }
game-core = { path = "../game-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Installs the card registry before the test harness `main`, so every test in a
# binary sees it installed — no per-test call to forget, no OnceLock race (#473).
ctor = "1.0"

