[package]
name = "game-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch rules engine: game state, actions, events, effect system. No I/O, no async."

[lints]
workspace = true

[dependencies]
