[package]
name = "game-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch rules engine: game state, actions, events, effect system. No I/O, no async."

[lints]
workspace = true

[features]
# Exposes the `test_support` module (TestGame builder, fixtures, event
# assertion macros) for downstream crates' own tests. Always available
# inside game-core's own test runs via `cfg(test)`.
test-support = []

[dependencies]
serde = { version = "1", features = ["derive"] }
rand_chacha = { version = "0.9", default-features = false }
