[package]
name = "game-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch rules engine: game state, actions, events, effect system. No I/O, no async."

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
rand_chacha = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = "1"
