[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch client/server wire protocol: shared serde message types."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
