[package]
name = "scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch scenario modules and campaign orchestrators."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
cards = { path = "../cards" }
