[package]
name = "scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch scenario modules and campaign orchestrators."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
cards = { path = "../cards" }

[features]
default = ["test_fixtures"]
# Compile the `test_fixtures` module (synthetic / minimal scenarios)
# into the crate. Used by `crates/scenarios/tests/` integration tests
# (always enabled there via `cfg(test)`) and may be enabled by
# downstream crates (server / web integration tests) that want the
# fixture without writing their own.
test_fixtures = []
