[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch server: Axum HTTP + websocket hub, SQLite persistence."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
cards = { path = "../cards" }
scenarios = { path = "../scenarios" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
