[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch server: Axum HTTP + websocket hub, SQLite persistence."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
protocol = { path = "../protocol" }
cards = { path = "../cards" }
# Explicit: synthetic fixtures power the toy scenario at runtime this phase;
# keep them even if `test_fixtures` leaves `scenarios`' default set (phase-7).
scenarios = { path = "../scenarios", features = ["test_fixtures"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
