[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch web client: Leptos CSR app compiled to WASM."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
