[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eldritch web client: Leptos CSR app compiled to WASM."

[lints]
workspace = true

[dependencies]
game-core = { path = "../game-core" }
protocol = { path = "../protocol" }
cards = { path = "../cards" }
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.7", features = ["websocket", "http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage", "Location", "Window", "Element", "HtmlElement", "HtmlDivElement", "MouseEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "NodeList", "HtmlElement"] }
